<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.lanimall.messaging-samples</groupId>
	<artifactId>spring-jms-message-generator</artifactId>
	<version>0.0.1</version>
	<name>Spring JMS Event Generator</name>
	<description>Spring JMS Event Generator</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.2.4.RELEASE</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.7</java.version>
        <logback.version>1.1.1</logback.version>
	</properties>

	<developers>
		<developer>
			<id>fsanglie</id>
			<name>Fabien Sanglier</name>
			<email>fsanglie@terracottatech.com</email>
			<url>http://www.terracotta.org</url>
			<organization>Terracotta, Inc.</organization>
			<organizationUrl>http://www.terracotta.org</organizationUrl>
			<timezone>-6</timezone>
		</developer>
	</developers>

	<dependencies>
        <!-- Spring -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jms</artifactId>
        </dependency>

        <dependency>
            <groupId>javax.jms</groupId>
            <artifactId>jms-api</artifactId>
            <version>1.1-rev-1</version>
        </dependency>

        <!--<dependency>-->
            <!--<groupId>ch.qos.logback</groupId>-->
            <!--<artifactId>logback-classic</artifactId>-->
            <!--<version>${logback.version}</version>-->
        <!--</dependency>-->
	</dependencies>

	<build>
        <plugins>
            <plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.3.1</version>
				<configuration>
					<repositoryLayout>flat</repositoryLayout>
                    <useWildcardClassPath>true</useWildcardClassPath>
                    <!-- Extra JVM arguments that will be included in the bin scripts -->
					<extraJvmArguments>-Xms512m -Xmx512m -XX:MaxPermSize=256m -XX:+UseParallelOldGC</extraJvmArguments>
					<programs>
						<program>						
							<mainClass>com.github.lanimall.messaging.samples.jmsgenerator.Application</mainClass>
							<name>AppLauncher</name>
						</program>
					</programs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
